Name:                learn-snap
Version:             0.1
Synopsis:            Demoing Heist with Digestive Functors
Description:         A working Snap site to show off Heist & Digestive Functors
License:             BSD3
Author:              Eric Rasmussen
Maintainer:          eric@chromaticleaves.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable learnsnap
  hs-source-dirs: src,
                  src/demos/forms,
                  src/demos/templates,
                  src/demos/utils
  main-is: Main.hs

  GHC-Options: -fwarn-unused-imports

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.2,
    time                      >= 1.1     && < 1.5,
    transformers              >= 0.2     && < 0.4,
    xmlhtml                   >= 0.1,
    containers                >= 0.5,
    digestive-functors        >= 0.6,
    digestive-functors-snap   >= 0.6,
    digestive-functors-heist  >= 0.8

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && <= 4.2
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && <= 4.2

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans


Executable highlight-code-snippets
  hs-source-dirs: codesnippets
  main-is: CodeSnippets.hs

  GHC-Options: -fwarn-unused-imports

  build-depends:
    highlighting-kate         >= 0.5.6 && < 0.6,
    blaze-html                >= 0.6   && < 0.8,
    filepath                  >= 1.3   && < 2.0,
    directory                 >= 1.2   && < 2.0

